Add initial ui functionality

--- a/test_asset/config.yaml
+++ b/test_asset/config.yaml
@@ -11,3 +11,8 @@ services:
       sid:
         - fcbb:bb00:2::2
         - fcbb:bb00:4::2
+  wc.hawk.net:
+    - intent: high-bandwidth
+      sid:
+        - fcbb:bb00:1::2
+        - fcbb:bb00:3::2
