--- a/test_asset/config.yaml
+++ b/test_asset/config.yaml
@@ -14,11 +14,19 @@ services:
         sid:
           - fcbb:bb00:1::2
           - fcbb:bb00:3::2
+      - intent: flex-algo
+        sid:
+          - fcbb:bb00:1::2
+          - fcbb:bb00:3::2
   webserver-c:
     ipv6_addresses:
       - fcbb:cc00:3::a
     intents:
       - intent: high-bandwidth
+        sid: 
+          - fcbb:bb00:1::2
+          - fcbb:bb00:3::2
+      - intent: flex-algo
         sid: 
           - fcbb:bb00:1::2
           - fcbb:bb00:3::2
@@ -28,6 +36,10 @@ services:
       - fcbb:cc00:4::b
       - fcbb:cc00:4::c
     intents:
+      - intent: flex-algo
+        sid: 
+          - fcbb:bb00:1::2
+          - fcbb:bb00:3::2
       - intent: high-bandwidth
         sid: 
           - fcbb:bb00:1::2
